<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scheduleRowCL"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="60dp"
    android:paddingTop="14dp"
    android:paddingEnd="20dp"
    android:paddingBottom="14dp"
    android:visibility="gone"
    tools:visibility="visible">


    <TextView
        android:id="@+id/nameScheduleHourRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hour_range_example_parcial"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/buildingIconScheduleRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/building_icon_schedule"
        app:layout_constraintEnd_toStartOf="@+id/buildingScheduleRow"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_icon_sharp_location_city" />

    <TextView
        android:id="@+id/buildingScheduleRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/building_example_parcial"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toStartOf="@id/roomIconScheduleRow"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/roomIconScheduleRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/room_icon_schedule"
        app:layout_constraintEnd_toStartOf="@+id/roomScheduleRow"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_icon_sharp_meeting_room" />

    <TextView
        android:id="@+id/roomScheduleRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_example_parcial"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>