<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/loginRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/loginLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/prompt_id"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/idField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints="AUTOFILL_HINT_ID"
                android:hint="@string/example_id"
                android:inputType="textEmailAddress"
                android:maxLength="9"
                android:maxLines="1"
                android:saveEnabled="true"
                android:singleLine="true"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/prompt_password"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <EditText
                    android:id="@+id/passwordField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:autofillHints="AUTOFILL_HINT_PASSWORD"
                    android:hint="@string/example_password"
                    android:imeActionLabel="@string/action_sign_in"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textAllCaps="false"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <Switch
                android:id="@+id/passwordSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/remember_password"
                android:textSize="18sp" />

            <Button
                android:id="@+id/signInButton"
                android:theme="@style/PrimaryColoredButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:clickable="true"
                android:focusable="true"
                android:enabled="false"
                android:text="@string/action_sign_in"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/loginLoading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:visibility="visible"/>

    </RelativeLayout>
</ScrollView>