<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:padding="16dp"
    android:paddingStart="28dp"
    android:paddingEnd="28dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameParcialGrade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:text="@string/name_example_parcial"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/pointsParcialGrade"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pointsParcialGrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/points_example_parcial"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/maxPointsParcialGrade"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/maxPointsParcialGrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/max_points_example_parcial"
                android:textColor="@color/colorGrey"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateParcialGrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_example_parcial"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/percentageParcialGrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percentage_example_parcial"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>