<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scheduleRefresh"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ScheduleSubjectDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/scheduleSubjectDetailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/scheduleAppBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include
                    android:id="@+id/scheduleToolbarIncluded"
                    layout="@layout/calendar_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.appbar.AppBarLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/subjectNameSchedule"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/name_example_grades"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="24sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toStartOf="@id/sectionSchedule"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/instructorNameSchedule"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/instructor_example_grades"
                    android:textColor="@color/colorText"
                    android:textSize="18sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/subjectNameSchedule"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/codeSchedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/code_example_grades"
                    android:textSize="16sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/instructorNameSchedule"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/creditsSchedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/credits_example_grades"
                    android:textSize="16sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/codeSchedule"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/datesSchedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/date_range_example_parcial"
                    android:textSize="16sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/creditsSchedule"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/sectionSchedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/section_example_grades"
                    android:textColor="@color/colorText"
                    android:textSize="22sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/subjectNameSchedule"
                    tools:visibility="visible" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ExpandableListView
                android:id="@+id/dayScheduleExpandableList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/datesSchedule" />

            <!-- With a normal scrollview, the list can be
            scrolled down normally in every device, with the disadvantage of being unable
            to scroll back up without activating the refresh
            swipe gesture

            With nested scrollview and nSE:true, the list performs great on post lollipop
            devices, with scrolling completely disabled on pre lollipop devices-->

        </LinearLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>