<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewGradeSubject"
    android:layout_marginStart="12dp"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    android:layout_marginEnd="12dp"
    android:elevation="2dp"
    app:cardCornerRadius="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="14dp"
        android:paddingEnd="20dp"
        android:paddingBottom="14dp">

        <TextView
            android:id="@+id/nameGradeSubject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/name_example_grades"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/partialGradeSubject"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/partialGradeSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/partial_example_grades"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/nameGradeSubject"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1" />

        <View
            android:id="@+id/gradesSubjectSeparator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorGreyDivider"
            app:layout_constraintBottom_toTopOf="@id/codeGradeSubject"
            app:layout_constraintTop_toBottomOf="@+id/nameGradeSubject"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/codeGradeSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_example_grades"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/gradesSubjectSeparator"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>